Issue #55: Side menu wrapping instead of trucating (#56)
* Update docs and add layout region class helpers

* Add link to grid reference

* update link to grid

* Issue #55: Side menu wrapping instead of trucating

* Automated artifact build by Github Actions

* Update vrt output

* Automated artifact build by Github Actions

---------

--- a/src/main.css
+++ b/src/main.css
@@ -596,8 +596,8 @@ html .layout {
   .menu-tree li.leaf 
   {
     a {
-      @apply inline-block pl-16 mb-0 w-full;
-      @apply overflow-hidden text-ellipsis;
+      @apply inline-block pl-16 mb-0 w-full text-wrap;
+      /* @apply overflow-hidden text-ellipsis; */
     }
     a.active:before,
     a:hover::before {
